<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_baselayout"
    android:padding="@dimen/little_pad" >

    <ScrollView
        style="@style/style_baselayout"
        android:scrollbars="vertical" >

        <LinearLayout
            style="@style/style_baselayout"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/style_baselayout"
                android:background="@color/transparency_col_2"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_car_zg"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_zg" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_zg"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_dg"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_dg" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_dg"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_fg"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_fg" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_fg"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_hg"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_hg" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_hg"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_mg"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_mg" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_mg"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_rb"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_rb" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_rb"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_ydl"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_ydl" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_ydl"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_yg"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_yg" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_yg"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_rd"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_rd" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_rd"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

            <LinearLayout style="@style/style_layout" >

                <TextView
                    android:id="@+id/text_car_qt"
                    style="@style/style_car_text_title"
                    android:text="@string/str_car_qt" />

                <com.angcyo.ui.MyGridView
                    android:id="@+id/grid_car_qt"
                    style="@style/style_car_grid_view" >
                </com.angcyo.ui.MyGridView>
            </LinearLayout>

          <!--   <FrameLayout
                android:id="@+id/banner_ad_container1"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/little_pad"
                android:layout_height="@dimen/ads_banner_height" /> -->
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/transparency_col"
        android:visibility="visible" >

        <TextView
            android:id="@+id/text_load_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_load_tip"
            android:textColor="@color/text_col"
            android:textSize="@dimen/text_middle_size" />

        <ImageView
            android:id="@+id/img_load_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/anim_list_saomiao" />
    </RelativeLayout>

</RelativeLayout>